--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -13,17 +13,16 @@
     </header>
     <div>
         <h2>Acessar conta</h2> 
-        <form action="./acesso/acesso.html">  <!--Serve para redirecionar para pagina de acesso-->
-            <label for="email">Email</label> 
-            <input type="email" id="email" name="email" required>  <!--Aqui ele vai ter que colocar um email, pode ser um não valido por enquanto   -->
-            <br>  <!--Para pular linha   --> 
-            <label for="senha">senha</label>
-            <input type="password" id="senha" name="senha" required>
-            <br>
-            <button type="submit">Acessar</button>  <!--Usuario ao clicar vai conseguir acessar a pagina    -->
-        </form>
+        <label for="email">Email</label> 
+        <input type="email" id="email" required>
+        <br>
+        <label for="senha">Senha</label>
+        <input type="password" id="senha" required>
+        <br>
+        <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso/acesso.html">Acessar</a></span></p>
         <br>
         <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso/criar.html">Criar conta</a></span></p>
     </div>
+        </div>
 </body>
 </html>
