--- a/HTML/acesso/criar.html
+++ b/HTML/acesso/criar.html
@@ -15,20 +15,20 @@
     </header>
     <div>
         <h2>Criar conta</h2>
-        <form action="acesso.html">
-            <label for="nome">Nome</label>
-          <input type="text" id="nome" name="nome" required>
-          <br>
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required>
-          <label for="senha">Senha</label>
-          <input type="password" id="senha" name="senha" required>
-          <br>
-          <button type="submit">Criar conta</button>
-    </div>
-    <div>
-        <br>
-        <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="../Koibank.html">Já tenho uma conta</a></span></p>
+       
+        <label for="nome">Nome</label>
+      <input type="text" id="nome" name="nome" required>
+      <br>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" name="senha" required>
+      <br>
+      <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso.html">Acessar</a></span></p>
+</div>
+<div>
+    <br>
+    <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="../Koibank.html">Já tenho uma conta</a></span></p>
 </div>
 </body>
 </html>
