--- a/index.html
+++ b/index.html
@@ -12,18 +12,10 @@
         <p>O seu banco digital</p> 
     </header>
     <div>
-        <h2>Acessar conta</h2> 
-        <form action="./acesso/acesso.html">  <!--Serve para redirecionar para pagina de acesso-->
-            <label for="email">Email</label> 
-            <input type="email" id="email" name="email" required>  <!--Aqui ele vai ter que colocar um email, pode ser um não valido por enquanto   -->
-            <br>  <!--Para pular linha   --> 
-            <label for="senha">senha</label>
-            <input type="password" id="senha" name="senha" required>
-            <br>
-            <button type="submit">Acessar</button>  
+        <h2><li><a href="./HTML/Koibank.html">Clique aqui para acessar a Pagina Principal</a></li></h2> 
         </form>
         <br>
-        <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso/criar.html">Criar conta</a></span></p>
+    
     </div>
 </body>
 </html>
