--- a/HTML/acesso/acesso.html
+++ b/HTML/acesso/acesso.html
@@ -5,25 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KoiBank</title> <!--titulo do site na aba-->
-          
 </head>
 <body>
 
     <header>
-    <h1> Bem-vindo de volta</h1> <!--titulo do site-->
-      <p>KoiBank O seu banco digital</p> 
+        <h1> Bem-vindo de volta</h1> <!--titulo do site-->
+        <p>KoiBank O seu banco digital</p> 
     </header>
     <div>
         <ol>
-            <li><a href="./interno/saldo.html">Saldo da conta</a></li>
-            <li><a href="./interno/deposito.html">Depósito da conta</a></li>
-            <li><a href="./interno/pagamentos.html">Faça pagamentos</a></li>
-            <li><a href="./interno/cartao.html">Cartões da conta</a></li>
-            <li><a href="./interno/seguros.html">Seguros</a></li>
-            <li><a href="./interno/financiamento.html">Financiamentos</a></li>
-    </ol>
-    <p><a href="../Koibank.html">Sair da conta</a> </p>
-</div>
+            <li><a href="/HTML/acesso/interno/saldo.html">Saldo da conta</a></li>
+            <li><a href="/HTML/acesso/interno/deposito.html">Depósito da conta</a></li>
+            <li><a href="/HTML/acesso/interno/pagamentos.html">Faça pagamentos</a></li>
+            <li><a href="/HTML/acesso/interno/cartao.html">Cartões da conta</a></li>
+            <li><a href="/HTML/acesso/interno/seguros.html">Seguros</a></li>
+            <li><a href="/HTML/acesso/interno/financiamento.html">Financiamentos</a></li>
+        </ol>
+        <p><a href="/HTML/Koibank.html">Sair da conta</a></p>
+    </div>
 </body>
 </html>
  
