--- a/HTML/acesso/acesso.html
+++ b/HTML/acesso/acesso.html
@@ -14,14 +14,14 @@
     </header>
     <div>
         <ol>
-            <li><a href="/HTML/acesso/interno/saldo.html">Saldo da conta</a></li>
-            <li><a href="/HTML/acesso/interno/deposito.html">Depósito da conta</a></li>
-            <li><a href="/HTML/acesso/interno/pagamentos.html">Faça pagamentos</a></li>
-            <li><a href="/HTML/acesso/interno/cartao.html">Cartões da conta</a></li>
-            <li><a href="/HTML/acesso/interno/seguros.html">Seguros</a></li>
-            <li><a href="/HTML/acesso/interno/financiamento.html">Financiamentos</a></li>
+            <li><a href="./interno/saldo.html">Saldo da conta</a></li>
+            <li><a href="./interno/deposito.html">Depósito da conta</a></li>
+            <li><a href="./interno/pagamentos.html">Faça pagamentos</a></li>
+            <li><a href="./interno/cartao.html">Cartões da conta</a></li>
+            <li><a href="./interno/seguros.html">Seguros</a></li>
+            <li><a href="./interno/financiamento.html">Financiamentos</a></li>
         </ol>
-        <p><a href="/HTML/Koibank.html">Sair da conta</a></p>
+        <p><a href="../Koibank.html">Sair da conta</a></p>
     </div>
 </body>
 </html>
