alterações HTML e CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,44 @@
     
 </head>
 <body>
-    <h1>KoiBank</h1>
+    <header>
+    <div id="título">
+        KOI BANK
+    </div>
+    <div id="acessar">
+        <button id="botão-acessar">ACESSAR MINHA CONTA</button>
+    </div>    
+    </header>
+
+    <div id="logo">
+        <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\Logo KoiBank.jpg">
+    </div>
+    
+    <div id="texto1">    
+        <p>Tudo o que você precisa em um só banco, em um só app</p>
+    </div>
+
+    <div id="botão-abrir-conta">
+        <button id="abrir-conta">Abrir minha conta</button>
+    </div>
+
+    <div id="conta-digital">
+        <p id="conta">Conta digital </p>
+        <img id="app"src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\app.jpg">
+        <p>Rende mais que poupança!</p>
+        <p>Sem taxa de manutenção!</p>
+        <p>Sem letras miúdas!</p>
+        <button id="baixar-app">Baixe o app</button>
+    </div>
+
+    <div id="cartão-crédito">
+        <p id="cartão">Peça seu cartão de crédito</p>
+        <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\card.jpg">
+        <p>Moderno, simples</p>
+        <p>Sem anuidade</p>
+        <button id="peça-já">Peça já</button>
+    </div>
+
     <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
     <p>Gabriel Girotto Zambaldi RA 202212039511</p>
     <p>Renato Hidaka Matos RA 202302382452</p>
