Ajustes de layout de pag de ab de conta

--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -14,13 +14,13 @@
         KOI BANK
     </div>
     <div id="acessar">
+        <a id="pginicial" href="file:///C:/Users/gabriel.girotto/OneDrive%20-%20TRANSDATA%20INDUSTRIA%20E%20SERVICOS%20DE%20AUTOMACAO%20LTDA/%C3%81rea%20de%20Trabalho/Pessoal%20Gabriel/4%20-%20HTML/KoiBank/HTML/Tema.html">Página inicial</a>
         <button id="botão-acessar">ACESSAR MINHA CONTA</button>
     </div>    
     </header>
-
-    <div class="container">
+    <main>
         <div id="logo2">
-          <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\Logo KoiBank.jpg">
+          <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\Logo KoiBank.jpg">
         <p id="texto2">Você está à um passo de uma conta completa com cartão de crédito e taxa zero</p>
         </div>
             
@@ -53,18 +53,18 @@
                     </p>
             </form>
         </div>
-    </div>
-    
+    </main>
+
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a href="#">Trabalhe conosco</a>
+                <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a href="#">Sobre nós</a>
+                <a id="links" href="#">Sobre nós</a>
                 | 
-                <a href="#">LGPD</a>
+                <a id="links" href="#">LGPD</a>
                 |
-                <a href="#">Fale conosco</a>
+                <a id="links" href="#">Fale conosco</a>
             </p>
         </div>
         <div id="infos">
