--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
     <title>KoiBank - Página inicial</title>
     
 </head>
@@ -19,7 +19,7 @@
     </header>
 
     <div id="logo1">
-        <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\Logo KoiBank.jpg">
+        <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\Logo KoiBank.jpg">
     </div>
     
     <div id="texto1">    
@@ -27,12 +27,12 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <button id="abrir-conta"><a href="file:///C:/Users/gabriel.girotto/OneDrive%20-%20TRANSDATA%20INDUSTRIA%20E%20SERVICOS%20DE%20AUTOMACAO%20LTDA/%C3%81rea%20de%20Trabalho/Pessoal%20Gabriel/4-%20HTML/KoiBank/HTML/Abertura_conta.html?primeiro+nome=&%C3%BAltimo+nome=&cpf=&email=&endere%C3%A7o=&n%C3%BAmero=&complemento=&CEP=&area+code=&phone+number=">ABRA SUA CONTA</a></button>
+        <button id="abrir-conta"><a id="abrir-conta" href="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\KoiBank\HTML\Abertura_conta.html">ABRA SUA CONTA</a></button>
     </div>
 
     <div id="conta-digital">
         <p id="conta">Conta digital </p>
-        <img id="app"src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\app.jpg">
+        <img id="app"src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\app.jpg">
         <p id="conta">Rende mais que poupança!</p>
         <p id="conta">Sem taxa de manutenção!</p>
         <button id="baixar-app">BAIXE O APP</button>
@@ -40,7 +40,7 @@
 
     <div id="cartão-crédito">
         <p id="cartão">Peça seu cartão de crédito</p>
-        <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4- HTML\credit card.png">
+        <img id="credit-card" src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\credit-card.jpg">
         <p id="cartão">Moderno, simples</p>
         <p id="cartão">Sem anuidade</p>
         <button id="peça-já">PEÇA JÁ</button>
@@ -49,13 +49,13 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a href="#">Trabalhe conosco</a>
+                <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a href="#">Sobre nós</a>
+                <a id="links" href="#">Sobre nós</a>
                 | 
-                <a href="#">LGPD</a>
+                <a id="links" href="#">LGPD</a>
                 |
-                <a href="#">Fale conosco</a>
+                <a id="links" href="#">Fale conosco</a>
             </p>
         </div>
         <div id="infos">
