--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -14,7 +14,7 @@
         KOI BANK
     </div>
     <div id="acessar">
-        <button id="botaohome">Pagina Inicial</button>
+        <button id="botaohome"><li><a href="./Tema.html" ></lihref>Pagina Inicial</button>
     </div>    
     </header>
 
@@ -32,7 +32,7 @@
                     <input type="text" name="cpf" required>
 
                 <p>Senha *</p>
-                   <input type="text" name="senha" required>
+                   <input type="password" name="senha" required>
                    
                     <p>
                         <input type="submit" name="Acessar" id="enviar">
@@ -46,7 +46,7 @@
             <p>
                 <a href="#">Trabalhe conosco</a>
                 | 
-                <a href="#">Sobre nós</a>
+                <a href="./Koibank.html">Sobre nós</a>
                 | 
                 <a href="#">LGPD</a>
                 |
