--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -14,7 +14,7 @@
         KOI BANK
     </div>
     <div id="acessar">
-        <button id="botão-acessar">ACESSAR MINHA CONTA</button>
+        <button id="botão-acessar"><li><a href="./Login.html">ACESSAR MINHA CONTA</button> 
     </div>    
     </header>
 
@@ -27,7 +27,7 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <button id="abrir-conta"><a id="abrir-conta" href="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\KoiBank\HTML\Abertura_conta.html">ABRA SUA CONTA</a></button>
+        <button id="abrir-conta"><a id="abrir-conta" href="./Abertura_conta.html">ABRA SUA CONTA</a></button>
     </div>
 
     <div id="conta-digital">
@@ -51,7 +51,7 @@
             <p>
                 <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a id="links" href="#">Sobre nós</a>
+                <a id="links" href="./Koibank.html">Sobre nós</a>
                 | 
                 <a id="links" href="#">LGPD</a>
                 |
@@ -64,15 +64,6 @@
         </div>
     </footer>
     
-    <div id="equipe">
-        <h2>EQUIPE</h2>
-        <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
-        <p>Gabriel Girotto Zambaldi RA 202212039511</p>
-        <p>Renato Hidaka Matos RA 202302382452</p>
-        <p>Daniel Amaral Pereira RA 202302382142</p>
-        <p>Lucas Teixeira Alexandre RA 202211299935</p>
-        <h2>SOBRE O PROJETO:</h2>
-        Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.
-    </div>
+    
 </body>
 </html>
