--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KoiBank</title> <!--titulo do site na aba-->
 </head>
+<style type></style>
 <body>
 
     <header>
         <h1> Bem-vindo ao KoiBank</h1> <!--titulo do site-->
         <p>O seu banco digital</p> 
     </header>
+    <div>
+        <h2><li><a href="./HTML/Koibank.html">Clique aqui para acessar a Pagina Principal</a></li></h2> 
+        </form>
+        <br>
+    
+    </div>
+    <div>
+        <h2><li><a href="./HTML/Koibank.html">Clique aqui para acessar a Pagina Principal</a></li></h2> 
+        </form>
+        <br>
+    
+    </div>
     <div>
         <h2><li><a href="./HTML/Koibank.html">Clique aqui para acessar a Pagina Principal</a></li></h2> 
         </form>
