--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KoiBank</title> <!--titulo do site na aba-->
+    <title>KoiBank - Sobre Nós</title> <!--titulo do site na aba-->
 </head>
 <body>
 
     <header>
-        <h1> Bem-vindo ao KoiBank</h1> <!--titulo do site-->
-        <p>O seu banco digital</p> 
-    </header>
-    <div>
-        <h2>Acessar conta</h2> 
-        <label for="email">Email</label> 
-        <input type="email" id="email" required>
-        <br>
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" required>
-        <br>
-        <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso/acesso.html">Acessar</a></span></p>
-        <br>
-        <p style="margin-top: 10px;"><span style="border: 1px solid #000000; padding: 10px;"><a href="./acesso/formulario.html">Criar conta</a></span></p>
-    </div>
+        <div id="título">
+            Sobre Nós
         </div>
+        <div id="acessar">
+            <button id="botão-acessar" href="./Tema.html">Página Inicial</button>
+        </div>    
+        </header>
+            </div>
+        <div id="equipe">
+            <h2>EQUIPE</h2>
+            <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
+            <p>Gabriel Girotto Zambaldi RA 202212039511</p>
+            <p>Renato Hidaka Matos RA 202302382452</p>
+            <p>Daniel Amaral Pereira RA 202302382142</p>
+            <p>Lucas Teixeira Alexandre RA 202211299935</p>
+            <h2>SOBRE O PROJETO:</h2>
+            Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.
+        </div>
+
 </body>
 </html>
+
