--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -60,7 +60,7 @@
             <p>
                 <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a id="links" href="#">Sobre nós</a>
+                <a id="links" href="./Koibank.html">Sobre nós</a>
                 | 
                 <a id="links" href="#">LGPD</a>
                 |
