--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -13,7 +13,7 @@
             Sobre Nós
         </div>
         <div id="acessar">
-            <button id="botão-acessar" href="../Tema.html">Página Inicial</button>
+            <button id="botão-acessar" href="./Tema.html">Página Inicial</button>
         </div>    
         </header>
             </div>
