--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -12,8 +12,8 @@
     <div id="título">
         KOI BANK
     </div>
-    <div id="acessar">
-        <button id="botão-acessar">ACESSAR MINHA CONTA</button>
+    <div id="botão-acessar">
+        <button id="botão-acessar"><a id="botão-acessar" href= "./Login.html" >ACESSAR MINHA CONTA</button>
     </div>    
     </header>
 
@@ -26,7 +26,7 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <button id="abrir-conta"><a id="abrir-conta" href="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\KoiBank\HTML\Abertura_conta.html">ABRA SUA CONTA</a></button>
+        <button id="abrir-conta"><a id="abrir-conta" href= "./Abertura_conta.html" >ABRA SUA CONTA</a></button>
     </div>
 
     <div id="conta-digital">
@@ -50,7 +50,7 @@
             <p>
                 <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a id="links" href="#">Sobre nós</a>
+                <a id="links" href="./Koibank.html">Sobre nós</a>
                 | 
                 <a id="links" href="#">LGPD</a>
                 |
