href página inicial

--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -13,8 +13,8 @@
             Sobre Nós
         </div>
         <div id="acessar">
-            <button id="botão-acessar" href="./Tema.html">Página Inicial</button>
-        </div>    
+            <button id="botaohome"><li><a href="./Tema.html" ></lihref>Pagina Inicial</button>
+        </div>  
         </header>
             </div>
         <div id="equipe">
