--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -42,7 +42,7 @@
         <img id="credit-card" src="./acesso/Img/Cartão.jpeg">
         <p id="cartão">Moderno, simples</p>
         <p id="cartão">Sem anuidade</p>
-        <button id="peça-já">PEÇA JÁ</button>
+        <button id="peça-já"><a href= "./Abertura_conta.html">PEÇA JÁ</button>
     </div>
 
     <footer id="rodapé">
@@ -63,15 +63,6 @@
         </div>
     </footer>
     
-    <div id="equipe">
-        <h2>EQUIPE</h2>
-        <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
-        <p>Gabriel Girotto Zambaldi RA 202212039511</p>
-        <p>Renato Hidaka Matos RA 202302382452</p>
-        <p>Daniel Amaral Pereira RA 202302382142</p>
-        <p>Lucas Teixeira Alexandre RA 202211299935</p>
-        <h2>SOBRE O PROJETO:</h2>
-        Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.
-    </div>
+   
 </body>
 </html>
