--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -14,8 +14,8 @@
         KOI BANK
     </div>
     <div id="acessar">
-        <a id="pginicial" href="file:///C:/Users/gabriel.girotto/OneDrive%20-%20TRANSDATA%20INDUSTRIA%20E%20SERVICOS%20DE%20AUTOMACAO%20LTDA/%C3%81rea%20de%20Trabalho/Pessoal%20Gabriel/4%20-%20HTML/KoiBank/HTML/Tema.html">Página inicial</a>
-        <button id="botão-acessar">ACESSAR MINHA CONTA</button>
+        <a id="pginicial" href="./Tema.html">Página inicial</a>
+        
     </div>    
     </header>
     <main>
