--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div id="logo2">
-          <img src="C:\Users\gabriel.girotto\OneDrive - TRANSDATA INDUSTRIA E SERVICOS DE AUTOMACAO LTDA\Área de Trabalho\Pessoal Gabriel\4 - HTML\Logo KoiBank.jpg">
+          <img src="./acesso/Img/Logo Koi Bank.jpeg">
         <p id="texto2">Você está à um passo de uma conta completa com cartão de crédito e taxa zero</p>
         </div>
             
