Para alto e avante

--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
     <title>KoiBank - Página inicial</title>
-    
 </head>
 <body>
     <header>
-    <div id="título">
-        KOI BANK
-    </div>
-    <div id="botão-acessar">
-        <button id="botão-acessar"><a id="botão-acessar" href= "./Login.html" >ACESSAR MINHA CONTA</button>
-    </div>    
+        <div id="título">
+            KOI BANK
+        </div>
+        <div id="botão-acessar">
+            <button id="botão-acessar"><a href="./Login.html">ACESSAR MINHA CONTA</a></button>
+        </div>    
     </header>
 
     <div id="logo1">
@@ -26,7 +25,7 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <button id="abrir-conta"><a id="abrir-conta" href= "./Abertura_conta.html" >ABRA SUA CONTA</a></button>
+        <button id="abrir-conta"><a href="./Abertura_conta.html">ABRA SUA CONTA</a></button>
     </div>
 
     <div id="conta-digital">
@@ -42,19 +41,19 @@
         <img id="credit-card" src="./acesso/Img/Cartão.jpeg">
         <p id="cartão">Moderno, simples</p>
         <p id="cartão">Sem anuidade</p>
-        <button id="peça-já"><a href= "./Abertura_conta.html">PEÇA JÁ</button>
+        <button id="peça-já"><a href="./Abertura_conta.html">PEÇA JÁ</a></button>
     </div>
 
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" href="#">Trabalhe conosco</a>
+                <a id="links" >Trabalhe conosco</a>
                 | 
                 <a id="links" href="./Koibank.html">Sobre nós</a>
                 | 
-                <a id="links" href="#">LGPD</a>
+                <a id="links">LGPD</a>
                 |
-                <a id="links" href="#">Fale conosco</a>
+                <a id="links" >Fale conosco</a>
             </p>
         </div>
         <div id="infos">
@@ -62,7 +61,5 @@
             <p>Av. Das Carpas, 3186 - Vila Toquio, São Paulo - 13000-000</p>
         </div>
     </footer>
-    
-   
 </body>
 </html>
