--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilo.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KoiBank - Sobre Nós</title> <!--titulo do site na aba-->
+    <title>KoiBank - Sobre Nós</title>
 </head>
 <body>
 
-    <header>
-        <div id="título">
-            Sobre Nós
-        </div>
-        <div id="acessar">
-            <button id="botaohome"><li><a href="./Tema.html" ></lihref>Pagina Inicial</button>
-        </div>  
-        </header>
+    <body>
+        <header>
+            <div id="título">
+                KOI BANK
             </div>
-        <div id="equipe">
-            <h2>EQUIPE</h2>
-            <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
-            <p>Gabriel Girotto Zambaldi RA 202212039511</p>
-            <p>Renato Hidaka Matos RA 202302382452</p>
-            <p>Daniel Amaral Pereira RA 202302382142</p>
-            <p>Lucas Teixeira Alexandre RA 202211299935</p>
-            <h2>SOBRE O PROJETO:</h2>
-            Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.
-        </div>
+            <div id="botaohome">
+                <button id="botaohome"><a href="./Tema.html">PAGINA INICIAL</a></button>
+            </div>    
+        </header>
+
+    <div id="equipe">
+        <h2>EQUIPE</h2>
+        <p>Aparecida de Freitas Rodrigues Cunha RA 202108461725</p>
+        <p>Gabriel Girotto Zambaldi RA 202212039511</p>
+        <p>Renato Hidaka Matos RA 202302382452</p>
+        <p>Daniel Amaral Pereira RA 202302382142</p>
+        <p>Lucas Teixeira Alexandre RA 202211299935</p>
+        <h2>SOBRE O PROJETO:</h2>
+        <p>Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.</p>
+    </div>
 
 </body>
 </html>
-
