Arrumando o Botão acessar

--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-    <div id="título">
-        KOI BANK
-    </div>
-    <div id="acessar">
-        <a id="pginicial" href="./Tema.html">Página inicial</a>
-        
+        <div id="título">
+            KOI BANK
+        </div>
+        <div id="botão-acessar">
+            <button id="botão-acessar"><a href="./Tema.html">PÁGINA INICIAL</a></button>
+        </div>
     </div>    
     </header>
     <main>
