--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -31,7 +31,7 @@
                     <input type="text" placeholder="Último nome" name="último nome" required>
 
                 <p>CPF *</p>
-                    <input type="text" name="cpf" required>
+                    <input type="text" placeholder="123.456.789-00" name="cpf" required>
 
                 <p>E-mail *</p>
                     <input type="email" placeholder="ex: email@yahoo.com" name="email" required>
@@ -43,7 +43,7 @@
                         <input type="text" placeholder="Número" name="número" required>
                         <input type="text" placeholder="Complemento" name="complemento">
                     </p>
-                       <input type="text" placeholder="CEP" name="CEP" required>
+                       <input type="text" placeholder="12345-678" name="CEP" required>
 
                 <p>Númeto de Telefone *</p>
                    <input type="text" placeholder="Código internacional" name="area code" required>
