--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -14,7 +14,7 @@
                 KOI BANK
             </div>
             <div id="botaohome">
-                <button id="botaohome"><a href="./Tema.html">PAGINA INICIAL</a></button>
+                <button id="botaohome"><a href="./Tema.html">PÁGINA INICIAL</a></button>
             </div>    
         </header>
 
@@ -28,6 +28,22 @@
         <h2>SOBRE O PROJETO:</h2>
         <p>Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.</p>
     </div>
+
+    <footer id="rodapé">
+        <div id="links">
+            <p>
+                <a id="links" >Trabalhe conosco</a>
+                | 
+                <a id="links">LGPD</a>
+                |
+                <a id="links" >Fale conosco</a>
+            </p>
+        </div>
+        <div id="infos">
+            <p>© 2023 BANCO KOI S.A. CNPJ: 00.000.000/0001-00</p>
+            <p>Av. Das Carpas, 3186 - Vila Toquio, São Paulo - 13000-000</p>
+        </div>
+    </footer>
 
 </body>
 </html>
