--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -33,7 +33,7 @@
         <img id="app" src="./acesso/Img/tela smartphone.jpeg">
         <p id="conta">Rende mais que poupança!</p>
         <p id="conta">Sem taxa de manutenção!</p>
-        <button id="baixar-app"><a> href="https://play.google.com/store/apps" >BAIXE O APP</a></button>
+        <button id="baixar-app"><a href="https://play.google.com/store/apps" >BAIXE O APP</a></button>
     </div>
 
     <div id="cartão-crédito">
