--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
     <title>KoiBank - Abertura de Conta</title>
     
 </head>
