--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="estilo.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
     <title>KoiBank - Sobre Nós</title>
 </head>
 <body>
