--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <a href="/HTML/Tema.html" class="botão-link">CONHEÇA NOSSO BANCO</a>
+        <a href="HTML/Tema.html" class="botão-link">CONHEÇA NOSSO BANCO</a>
     </div>
     
     
