--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -12,12 +12,14 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <button id="botão-acessar"><a href="./Login.html">ACESSAR MINHA CONTA</a></button>
+            <a href="./Login.html" class="botão-acessar">
+                <button>ACESSAR MINHA CONTA</button>
+            </a>    
         </div>    
     </header>
 
     <div id="logo1">
-        <img src="./acesso/Img/Logo Koi Bank.jpeg">
+        <img src="./acesso/Img/LogoKoiBank.jpeg">
     </div>
     
     <div id="texto1">    
@@ -30,7 +32,7 @@
 
     <div id="conta-digital">
         <p id="conta">Conta digital </p>
-        <img id="app" src="./acesso/Img/tela smartphone.jpeg">
+        <img id="app" src="./acesso/Img/telasmartphone.jpeg">
         <p id="conta">Rende mais que poupança!</p>
         <p id="conta">Sem taxa de manutenção!</p>
         <button id="baixar-app"><a href="https://play.google.com/store/apps/details?id=jp.mufg.bk.applisp.app&hl=pt_BR&gl=US" >BAIXE O APP</a></button>
