--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -12,14 +12,16 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <a href="./Login.html" class="botão-acessar">
-                <button>ACESSAR MINHA CONTA</button>
-            </a>    
-        </div>    
+            <a href="./Login.html">
+                <button class="botão-acessar">ACESSAR MINHA CONTA</button>
+            </a>
+        </div>
     </header>
+</body>
+
 
     <div id="logo1">
-        <img src="./acesso/Img/LogoKoiBank.jpeg">
+        <img src="./acesso/Img/LogoKoiBank.jpeg" alt="">
     </div>
     
     <div id="texto1">    
