--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -12,11 +12,11 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <a href="./Login.html">
-                <button class="botão-acessar">ACESSAR MINHA CONTA</button>
-            </a>
+            <a href="./Login.html" class="botão">ACESSAR MINHA CONTA</a>
         </div>
     </header>
+</body>
+
 
     <div id="logo1">
         <img src="./acesso/Img/LogoKoiBank.jpeg" alt="">
@@ -27,7 +27,7 @@
     </div>
 
     <div id="botão-abrir-conta">
-        <button id="abrir-conta"><a href="./Abertura_conta.html">ABRA SUA CONTA</a></button>
+     <a href="./Abertura_conta.html" class="botão">ABRA SUA CONTA</a>
     </div>
 
     <div id="conta-digital">
