--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -15,8 +15,6 @@
             <a href="./Login.html" class="botão">ACESSAR MINHA CONTA</a>
         </div>
     </header>
-</body>
-
 
     <div id="logo1">
         <img src="./acesso/Img/LogoKoiBank.jpeg" alt="">
@@ -27,15 +25,15 @@
     </div>
 
     <div id="botão-abrir-conta">
-     <a href="./Abertura_conta.html" class="botão">ABRA SUA CONTA</a>
+        <a href="./Abertura_conta.html" class="botão">ABRA SUA CONTA</a>
     </div>
 
     <div id="conta-digital">
         <p id="conta">Conta digital </p>
-        <img id="app" src="./acesso/Img/telasmartphone.jpeg">
-        <p id="conta">Rende mais que poupança!</p>
-        <p id="conta">Sem taxa de manutenção!</p>
-        <button id="baixar-app"><a href="https://play.google.com/store/apps/details?id=jp.mufg.bk.applisp.app&hl=pt_BR&gl=US" >BAIXE O APP</a></button>
+        <img id="app" src="./acesso/Img/telasmartphone.jpeg" alt="">
+        <p id="conta2">Rende mais que poupança!</p>
+        <p id="conta3">Sem taxa de manutenção!</p>
+        <button id="baixar-app">BAIXE O APP</a></button>
     </div>
 
     <div id="cartão-crédito">
@@ -64,5 +62,3 @@
         </div>
     </footer>
 </body>
-</html>
-
