--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -33,12 +33,12 @@
         <img id="app" src="./acesso/Img/telasmartphone.jpeg" alt="">
         <p id="conta2">Rende mais que poupança!</p>
         <p id="conta3">Sem taxa de manutenção!</p>
-        <button id="baixar-app">BAIXE O APP</a></button>
+        <button id="baixar-app"><a href="https://play.google.com/store/apps/details?id=jp.mufg.bk.applisp.app&hl=pt_BR&gl=US" >BAIXE O APP</a></button>
     </div>
 
     <div id="cartão-crédito">
         <p id="cartão">Peça seu cartão de crédito</p>
-        <img id="credit-card" src="./acesso/Img/Cartão.jpeg">
+        <img id="credit-card" src="./acesso/Img/Cartão.jpeg" alt="">
         <p id="cartão">Moderno, simples</p>
         <p id="cartão">Sem anuidade</p>
         <button id="peça-já"><a href="./Abertura_conta.html">PEÇA JÁ</a></button>
@@ -47,13 +47,13 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" >Trabalhe conosco</a>
+                <a id="links" href="#">Trabalhe conosco</a>
                 | 
                 <a id="links" href="./Koibank.html">Sobre nós</a>
                 | 
                 <a id="links" href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709compilado.htm" >LGPD</a>
                 |
-                <a id="links" >Fale conosco</a>
+                <a id="links" href="#">Fale conosco</a>
             </p>
         </div>
         <div id="infos">
@@ -62,3 +62,4 @@
         </div>
     </footer>
 </body>
+</html>
