--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -39,9 +39,9 @@
     <div id="cartão-crédito">
         <p id="cartão">Peça seu cartão de crédito</p>
         <img id="credit-card" src="./acesso/Img/Cartão.jpeg" alt="">
-        <p id="cartão">Moderno, simples</p>
-        <p id="cartão">Sem anuidade</p>
-        <button id="peça-já"><a href="./Abertura_conta.html">PEÇA JÁ</a></button>
+        <p id="cartão2">Moderno, simples</p>
+        <p id="cartão3">Sem anuidade</p>
+        <a href="./Login.html" class="botão">PEÇA JÁ</a>
     </div>
 
     <footer id="rodapé">
@@ -49,11 +49,11 @@
             <p>
                 <a id="links" href="#">Trabalhe conosco</a>
                 | 
-                <a id="links" href="./Koibank.html">Sobre nós</a>
+                <a id="links2" href="./Koibank.html">Sobre nós</a>
                 | 
-                <a id="links" href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709compilado.htm" >LGPD</a>
+                <a id="links3" href="#" >LGPD</a>
                 |
-                <a id="links" href="#">Fale conosco</a>
+                <a id="links4" href="#">Fale conosco</a>
             </p>
         </div>
         <div id="infos">
