Cometendo um crime

--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -33,7 +33,7 @@
         <img id="app" src="./acesso/Img/telasmartphone.jpeg" alt="">
         <p id="conta2">Rende mais que poupança!</p>
         <p id="conta3">Sem taxa de manutenção!</p>
-        <button id="baixar-app"><a href="https://play.google.com/store/apps/details?id=jp.mufg.bk.applisp.app&hl=pt_BR&gl=US" >BAIXE O APP</a></button>
+        <button id="baixar-app">BAIXE O APP</a></button>
     </div>
 
     <div id="cartão-crédito">
@@ -47,7 +47,7 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" href="#">Trabalhe conosco</a>
+                <a id="links5" href="#">Trabalhe conosco</a>
                 | 
                 <a id="links2" href="./Koibank.html">Sobre nós</a>
                 | 
