--- a/HTML/Tema.html
+++ b/HTML/Tema.html
@@ -33,7 +33,7 @@
         <img id="app" src="./acesso/Img/telasmartphone.jpeg" alt="">
         <p id="conta2">Rende mais que poupança!</p>
         <p id="conta3">Sem taxa de manutenção!</p>
-        <button id="baixar-app">BAIXE O APP</a></button>
+        <button id="baixar-app">BAIXE O APP</button>
     </div>
 
     <div id="cartão-crédito">
