Cha cha change yeah

--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -12,13 +12,13 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <button id="botão-acessar"><a href="./Tema.html">PÁGINA INICIAL</a></button>
+            <a href="./Tema.html" class="pagina botão-acessar">PÁGINA INICIAL</a></button>
         </div>    
     </header>
 
     <main>
         <div id="logo2">
-            <img src="./acesso/Img/Logo Koi Bank.jpeg" alt="Logo Koi Bank">
+            <img src="./acesso/Img/LogoKoiBank.jpeg" alt="Logo Koi Bank">
             <p id="texto2">Acesse sua conta</p>
         </div>
 
@@ -40,13 +40,13 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" >Trabalhe conosco</a>
+                <a id="links5" >Trabalhe conosco</a>
                 | 
-                <a id="links" href="./Koibank.html">Sobre nós</a>
+                <a id="links2" href="./Koibank.html">Sobre nós</a>
                 | 
-                <a id="links" href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709compilado.htm" >LGPD</a>
+                <a id="links3"  >LGPD</a>
                 |
-                <a id="links" >Fale conosco</a>
+                <a id="links4" >Fale conosco</a>
             </p>
         </div>
         <div id="infos">
