--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -12,7 +12,7 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <a href="./Tema.html" class="pagina botão-acessar">PÁGINA INICIAL</a></button>
+            <a href="./Tema.html" class="pagina botão-acessar">PÁGINA INICIAL</a>
         </div>    
     </header>
 
