--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
     <title>KoiBank - Sobre Nós</title>
 </head>
-<body>
-
     <body>
         <header>
             <div id="título">
                 KOI BANK
             </div>
             <div id="botaohome">
-                <button id="botaohome"><a href="./Tema.html">PÁGINA INICIAL</a></button>
+                <a href="./Tema.html" class="homee">PÁGINA INICIAL</a>
             </div>    
         </header>
 
@@ -32,11 +30,11 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" >Trabalhe conosco</a>
+                <a id="links2" >Trabalhe conosco</a>
                 | 
-                <a id="links" href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709compilado.htm" >LGPD</a>
+                <a id="links3"  >LGPD</a>
                 |
-                <a id="links" >Fale conosco</a>
+                <a id="links4" >Fale conosco</a>
             </p>
         </div>
         <div id="infos">
