--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -14,13 +14,13 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-            <button id="botão-acessar"><a href="./Tema.html">PÁGINA INICIAL</a></button>
+         <a href="./Tema.html" class="inicio">PÁGINA INICIAL</a></button>
         </div>
-    </div>    
+       
     </header>
     <main>
         <div id="logo2">
-          <img src="./acesso/Img/Logo Koi Bank.jpeg">
+          <img src="./acesso/Img/LogoKoiBank.jpeg" alt="">
         <p id="texto2">Você está à um passo de uma conta completa com cartão de crédito e taxa zero</p>
         </div>
             
