--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -58,13 +58,13 @@
     <footer id="rodapé">
         <div id="links">
             <p>
-                <a id="links" href="#">Trabalhe conosco</a>
+                <a id="links5" href="#">Trabalhe conosco</a>
                 | 
-                <a id="links" href="./Koibank.html">Sobre nós</a>
+                <a id="links2" href="./Koibank.html">Sobre nós</a>
                 | 
-                <a id="links" href="http://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/L13709compilado.htm" >LGPD</a>
+                <a id="links3" href="#" >LGPD</a>
                 |
-                <a id="links" href="#">Fale conosco</a>
+                <a id="links4" href="#">Fale conosco</a>
             </p>
         </div>
         <div id="infos">
