--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -14,7 +14,7 @@
             KOI BANK
         </div>
         <div id="botão-acessar">
-         <a href="./Tema.html" class="inicio">PÁGINA INICIAL</a></button>
+         <a href="./Tema.html" class="inicio">PÁGINA INICIAL</a>
         </div>
        
     </header>
