Informação Sobre Nós

--- a/HTML/Koibank.html
+++ b/HTML/Koibank.html
@@ -26,7 +26,7 @@
         <p>Daniel Amaral Pereira RA 202302382142</p>
         <p>Lucas Teixeira Alexandre RA 202211299935</p>
         <h2>SOBRE O PROJETO:</h2>
-        <p>Nosso projeto será um banco digital, onde teremos os cadastros de clientes, programas de benefícios, consultoria.</p>
+        <p>O projeto está sendo feito utilizando as linguagens padrão: HTML5, CSS e Javascript, sendo adaptável para qualquer tela sendo computador, notebook, ou celulares.</p>
     </div>
 
     <footer id="rodapé">
