--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -69,8 +69,8 @@
             <p>Av. Das Carpas, 3186 - Vila Toquio, São Paulo - 13000-000</p>
         </div>
     </footer>
-
-    <script>
+    <script src="script.js"></script>
+    <script >
         document.addEventListener('DOMContentLoaded', function() {
             const formulario = document.getElementById('meuformulario');
     
