--- a/HTML/Abertura_conta.html
+++ b/HTML/Abertura_conta.html
@@ -92,7 +92,7 @@
                     // Adicione outros campos do formulário conforme necessário
                 };
     
-                fetch('https://legendary-trout-66jgqr9wj6rh4jvp-5000.app.github.dev/processar_formulario', {
+                fetch('http://127.0.0.1:5000/processar_formulario', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
