--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -71,7 +71,7 @@
                     senha: document.querySelector('input[name="senha"]').value,
                 };
 
-                fetch('https://legendary-trout-66jgqr9wj6rh4jvp-5000.app.github.dev/processar_login', {
+                fetch('http://127.0.0.1:5000/processar_formulario', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
