--- a/HTML/acesso/acesso.html
+++ b/HTML/acesso/acesso.html
@@ -11,8 +11,8 @@
 
 <header>
     <div id="primeiro">
-        <h1> Bem-vindo de volta</h1> <!--titulo do site-->
-        <p>KoiBank O seu banco digital</p>
+        <h1> Bem-vindo</h1> <!--titulo do site-->
+        <p>KoiBank o seu banco digital</p>
     </div>
 </header>
 
