Integração com o backend e o banco de Dados

--- a/HTML/acesso/acesso.html
+++ b/HTML/acesso/acesso.html
@@ -5,6 +5,8 @@
     <!-- Link para o arquivo CSS gerado a partir do SCSS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
+  
+
     <title>KoiBank</title>
 </head>
 <body>
@@ -27,6 +29,9 @@
             <li><a id="acesso6"  href="#">Financiamentos</a></li>
         </ol>
         <p><a id="sair" href="/HTML/Login.html">SAIR DA CONTA</a></p>
+        <p><a id="excluir" href="/HTML/Login.html">Excluir Conta</a></p>
+
+
     </div>
 
     <div id="cartão-crédito">
@@ -53,7 +58,12 @@
         <p>Av. Das Carpas, 3186 - Vila Toquio, São Paulo - 13000-000</p>
     </div>
 </footer>
-    
+<script src="/HTML/acesso/acesso.js"></script>
+<script>
+    function confirmarExclusao() {
+        // Lógica para confirmar a exclusão
+    }
+</script>
 
 </body>
 </html>
