--- a/HTML/acesso/interno/Tema.html
+++ b/HTML/acesso/interno/Tema.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
     <title>KoiBank - Página inicial</title>
     
 </head>
