--- a/HTML/acesso/interno/deposito.html
+++ b/HTML/acesso/interno/deposito.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0">
     <title>KoiBank</title> <!--titulo do site na aba-->
           
 </head>
