--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -71,7 +71,7 @@
                     senha: document.querySelector('input[name="senha"]').value,
                 };
 
-                fetch('http://127.0.0.1:5004/login', {
+                fetch('https://congenial-space-winner-7qg96rvw6vg2pvpv-5004.app.github.dev/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
